# patterns

./: .gitignore  pyproject.toml
.deepsweep-assessment/: patterns-assessment.md
src/deepsweep/: __init__.py
src/deepsweep/patterns/: __init__.py  engine.py  loader.py  registry.py  schema.py
src/deepsweep/patterns/builtin/: __init__.py
src/deepsweep/patterns/builtin/config_drift/: __init__.py  debug_exposure.yaml
src/deepsweep/patterns/builtin/mcp_security/: __init__.py  tool_poisoning.yaml
src/deepsweep/patterns/builtin/prompt_injection/: __init__.py  cursor_rules_backdoor.yaml
src/deepsweep/patterns/builtin/secrets/: __init__.py  api_key_exposure.yaml
src/deepsweep/patterns/builtin/supply_chain/: __init__.py  slopsquatting.yaml
src/deepsweep/patterns/custom/: __init__.py
tests/: __init__.py  test_patterns.py
